--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "ESLint configuration settings for LaxarJS ES2015 repositories",
   "main": "index.js",
   "scripts": {
-    "test": "eslint index.js"
+    "test": "eslint index.js node.js"
   },
   "repository": {
     "type": "git",
