--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -46,7 +46,7 @@
       "no-implicit-globals": "error",
       "no-implied-eval": "error",
       "no-loop-func": "error",
-      "no-multi-spaces": "error",
+      "no-multi-spaces": "warn",
       "no-multi-str": "error",
       "no-new-func": "error",
       "no-new-wrappers": "error",
