--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "eslint-config-laxarjs",
-  "version": "0.4.0",
+  "version": "0.5.0-pre",
   "description": "ESLint configuration settings for LaxarJS ES2015 repositories",
   "main": "index.js",
   "scripts": {
