--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "eslint-config-laxarjs",
-  "version": "0.5.0-pre",
+  "version": "2.0.0-rc.0",
   "description": "ESLint configuration settings for LaxarJS ES2015 repositories",
   "main": "index.js",
   "scripts": {
@@ -21,6 +21,6 @@
   },
   "homepage": "https://github.com/LaxarJS/eslint-config-laxarjs#readme",
   "devDependencies": {
-    "eslint": "^3.0.1"
+    "eslint": "^3.13.1"
   }
 }
