(#5) added space-in-parens rule with level warn

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -149,6 +149,7 @@
       "prefer-spread": "warn",
       "prefer-template": "warn",
       "rest-spread-spacing": [ "warn", "never" ],
+      "space-in-parens": [ "warn", "always" ],
       "template-curly-spacing": [ "warn", "never" ]
    }
 }
